--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -23,9 +23,8 @@ jobs:
           uses: azure/powershell@v1
           with:
              inlineScript: |
+               write-host "$env:SUPER_SECRET"
                Get-AzResourceGroup
              azPSVersion: "latest"
-      
-       # - shell: pwsh
-        #  run: |
-         #         example-command "$env:SUPER_SECRET"
+ 
+                  
