--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,14 +18,15 @@ jobs:
             subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }} 
             enable-AzPSSession: true
           env:
-            SUPER_SECRET: ${{ secrets.KEY1 }}
+            SECRETS_CONTEXT: ${{ toJson(secrets) }}
 
         - name: 'Get resource group with PowerShell action'
           uses: azure/powershell@v1
           with:
              inlineScript: |
                write-host "ok"${{env.SUPER_SECRET}}
-               #Get-AzResourceGroup
+               $secrets = ($env:SECRETS_CONTEXT | ConvertFrom-Json -AsHashtable )
+               write-host $secrets
              azPSVersion: "latest"
  
                   
