--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,13 +17,15 @@ jobs:
             tenant-id: ${{ secrets.AZURE_TENANT_ID }}
             subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }} 
             enable-AzPSSession: true
-          env:
-            SECRETS_CONTEXT: ${{ secrets.REPO_J }}
+        
 
         - name: 'Get resource group with PowerShell action'
           uses: azure/powershell@v1
+          env:
+           KEYVAULT: ${{ secrets.KEYVAULT }}
           with:
              inlineScript: |
+               write-host "$env:KEYVAULT"
                write-host "ok"${{env.SUPER_SECRET}}
                $secrets = ( ${{ secrets.REPO_J }} | ConvertFrom-Json -AsHashtable )
                write-host $secrets
