--- a/.github/workflows/reusable-kv.yaml
+++ b/.github/workflows/reusable-kv.yaml
@@ -64,8 +64,10 @@ jobs:
         
         - name: 'checkout'
           uses: actions/checkout@v3
+          
           with:
             path: callerrepo
+            token: ${{secrets.TOKEN_ACCESS_REPO}}
 
         - name: 'Deploy arm template'
           id: arm
