--- a/.github/workflows/reusable-kv.yaml
+++ b/.github/workflows/reusable-kv.yaml
@@ -46,7 +46,7 @@ env:
     branchfile: ${{inputs.branchname}}
 jobs:
     deployment:
-        runs-on: ubuntu-latest
+        runs-on: windows-latest
         environment: ${{ inputs.env}}
 
         outputs:
