--- a/.github/workflows/reusable-kv.yaml
+++ b/.github/workflows/reusable-kv.yaml
@@ -61,6 +61,7 @@ jobs:
             client-id: ${{secrets.clientid}}
             tenant-id: ${{secrets.tenantid}}
             subscription-id: ${{secrets.subscriptionid}}
+            enable-AzPSSession: true
 
         
         - name: 'checkout'
