--- a/.github/workflows/call-kv.yaml
+++ b/.github/workflows/call-kv.yaml
@@ -17,6 +17,7 @@ jobs:
             env: dev
             azureregion: eastus
             resourcegroup: aap1
+            secrets: ${{ secrets.SECRETS_KEY_1 }}
         secrets:
             subscriptionid: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
             clientid: ${{ secrets.AZURE_CLIENT_ID }}
